--- a/src/keyboard/keyboard.scss
+++ b/src/keyboard/keyboard.scss
@@ -26,6 +26,16 @@
     margin-bottom: 15px;
     margin-left: 10px;
     cursor: pointer;
+
+    @media screen and (max-width: 520px) {
+      width: 60px;
+      font-size: 20px;
+
+      & img {
+        width: 24px;
+        height: 24px;
+      }
+    }
   }
 
   &__button:active {
@@ -71,7 +81,17 @@
     border-radius: 50%;
     background-color: #ff9a0a;
     margin-right: 10px;
-    cursor: pointer
+    cursor: pointer;
+
+    @media screen and (max-width: 520px) {
+      width: 60px;
+      font-size: 20px;
+
+      & img {
+        width: 24px;
+        height: 24px;
+      }
+    }
   }
 
   &__button:active {
